# os_labs

./: CMakeLists.txt
.devcontainer/: devcontainer.json
KP/: README.md  client  client.cpp  server  server.cpp  test.txt
lab1/: child1.c  child1.cpp  child2.c  child2.cpp  main2.c  parent.c  parent.cpp
lab1/ChildProcess/: ChildProcess.cpp
lab2/: main  main.c  main.py  main2  main2.c  main3  mainz  mainz.c
lab3/: child1  child1.c  child2  child2.c  ouput.txt  parent  parent.c
lab4/: CMakeLists.txt  Makefile  derivative.c  derivative.h  dyn_main.c  first_realization.c  function.h  lib_sort.c  lib_sort.h  main1.c  main2.c  program1  program2  second_realization.c  stat_main.c
laba5-7/: client.c  server.c
